# DesignPattern

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  DesignPattern.sln  LICENSE  README.md  appveyor.yml  vs_15_2017_Win64.bat  vs_16_2019-clang.bat  vs_16_2019.bat
Template/Behavior/ObserverTemplate/: CMakeLists.txt  Subject.hpp  main.cpp
Template/Create/: CMakeLists.txt
Template/Create/SingleTon/: CMakeLists.txt  SingleTon.hpp
Template/Create/SingletonTemplate/: CMakeLists.txt  main.cpp
code/: CMakeLists.txt
code/AbstractFactory/: IFactory.h  ListFactory.h  ListPage.h
code/Adapter_01/: PainterBanner.h
code/Adapter_02/: PainterBanner.h  README.md  main.cpp
code/Behavior/Command/: Drawable.h  MacroCommand.h
code/Behavior/Interpreter/: Add.h  Constant.h  Context.h  Div.h  Expression.h  Mul.h  README.md  Sub.h  Variable.cpp  Variable.h  main.cpp
code/Behavior/Iterator/: Aggregate.h  BookSelf.cpp  BookSelfIterator.cpp  BookSelfIterator.h  Iterator.h  README.md  main.cpp
code/Behavior/Mediator/: CColleague1.h  CColleague2.h  CMediator.h  IMediator.h  main.cpp
code/Behavior/Observer/: DigitObserver.h  GraphObserver.h  NumGen.h  NumGenObserver.h  README.md  RandomNumGen.h  main.cpp
code/Bridge/: CountDIsplay.h  IDisplayImpl.h  main.cpp
code/Builder/: TextBuilder.h  main.cpp
code/Command/: DrawCanvas.h  DrawCommand.h  ICommand.h  README.md  main.cpp
code/Composite/: Directory.h  Entry.h  File.h  README.md  main.cpp
code/Decorator/: IDisplay.h  SideBorder.h  main.cpp
code/Facade/: PageMaker.h  main.cpp
code/FactoryMethod/: IDCardFactory.h
code/FlyWeight/: BigChar.h  BigCharFactory.h
code/Iterator/: Book.h  BookSelf.h  Iterator.vcxproj  Iterator.vcxproj.filters
code/Mediator/: IColleague.h  README.md  main.cpp
code/Memento/: Gamer.h  Memento.h  README.md  main.cpp
code/Observer/: DigitObserver.h
code/Prototype/: IProduct.h  MessageBox.h  ProductMgr.h  main.cpp
code/Proxy/: README.md  main.cpp
code/ResponsibilityChain/: LimitSupport.h  README.md  Support.h  main.cpp
code/Singleton/: README.md  SingleTon.hpp  main.cpp
code/Singleton_Practise/: README.md  ThreeTon.h  main.cpp
code/State/: DayState.cpp  DayState.h  IContext.h  IState.h  NightState.h  SafeFrame.cpp  SafeFrame.h  main.cpp
code/Strategy/: ProbStrategy.h  README.md
code/TemplateMethod/: CharDIsplay.h
code/Visitor/: Directory.h  File.h  ListVisitor.h  Visitor.h  main.cpp
(+69 files in other folders)
