get_filename_component(tarName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
aux_source_directory(. SRC)
file(GLOB_RECURSE CURRENT_HEADERS  *.h *.hpp)
add_executable(${tarName} ${SRC} ${CURRENT_HEADERS})
add_test(NAME ${tarName} COMMAND ${tarName})
set_target_properties(${tarName} PROPERTIES FOLDER "TemplatePattern")